fixed overflow on calc and history display.

--- a/style.css
+++ b/style.css
@@ -48,32 +48,38 @@ body {
 .container.\31  .sub-container {
     display: grid;
     grid-template-rows: 1fr 3fr;
-
     width: 90%;
     height: 80%;
-
     border-radius: 10px;
-
     margin: auto;
-
     background: white;
 }
 
 .main, .secondary {
     display: flex;
-
     justify-content: right;
     align-items: end;
+    margin-right: 3%;
+}
 
-    margin-right: 1rem;
+#sub, #main {
+    height: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: end;
 }
 
 .main {
     margin-bottom: 1rem;
 }
 
+#sub {
+
+}
+
 #main {
-    font-size: 400%;
+    font-size: 4.25ch;
 }
 
 .container.\32 {
@@ -161,19 +167,23 @@ body {
         margin: auto;
     
         background: white;
+
+        overflow-x: hidden;
+        overflow-y: auto;
 }
 
 .sub-container .equation {
     display: grid;
-    justify-items: right;
-
-    margin: 5% 2.5%;
+    margin: 3% 3% 0 0;
     border-bottom: thick double rgb(175, 238, 238);
+    justify-items: end;
 }
 
 .expression {
+    text-align: end;
 }
 
 .answer {
-    font-size: 2rem;
+    margin-top: 5%;
+    font-size: 2.5ch;
 }
